--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "chart.js": "^4.3.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
